--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,6 +1,3 @@
-.sidebar {
-}
-
 .sidebar_compose {
   margin: 15px 0px !important;
   margin-left: 10px !important;
@@ -9,4 +6,9 @@
   padding: 15px !important;
   border-radius: 30px !important;
   box-shadow: 0px 2px 5px -2px rgba(0, 0, 0, 0.75);
+}
+
+.sidebar_footer {
+  display: flex;
+  justify-content: center;
 }
