--- a/src/styles/SendMail.css
+++ b/src/styles/SendMail.css
@@ -1,9 +1,56 @@
 .sendMail {
-     position: absolute;
-     bottom: 0;
-     right: 50px;
-     background-color: #404040;
-     width: 40%;
-     height: 40%;
-     max-width: 500px;
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  background-color: #404040;
+  width: 40%;
+  height: 40%;
+  max-width: 500px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid whitesmoke;
+  box-shadow: 0 5px 7px 0px rgba(0, 0, 0, 0.24);
+}
+
+.sendMail_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 13px;
+  color: grey;
+}
+
+.sendMail_close {
+  color: gray !important;
+}
+
+.sendMail_header > h3 {
+  color: whitesmoke;
+  font-size: 13px;
+}
+
+.sendMail_send {
+  background-color: #3079ed !important;
+  text-transform: capitalize !important;
+  margin: 15px !important;
+}
+
+.sendMail > form {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+
+.sendMail > form > input {
+  height: 30px;
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid whitesmoke;
+  outline: none;
+}
+
+.sendMail_message {
+  flex: 1;
 }
