style error text

--- a/src/styles/SendMail.css
+++ b/src/styles/SendMail.css
@@ -54,3 +54,10 @@
 .sendMail_message {
   flex: 1;
 }
+
+.sendMail_error {
+  background-color: white;
+  color: red;
+  text-align: right;
+  padding: 2px;
+}
