--- a/src/styles/SendMail.css
+++ b/src/styles/SendMail.css
@@ -6,12 +6,13 @@
   width: 40%;
   height: 40%;
   max-width: 500px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 8px;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   border: 1px solid whitesmoke;
   box-shadow: 0 5px 7px 0px rgba(0, 0, 0, 0.24);
+  z-index: 999;
 }
 
 .sendMail_header {
