--- a/src/styles/SendMail.css
+++ b/src/styles/SendMail.css
@@ -6,7 +6,8 @@
   width: 40%;
   height: 40%;
   max-width: 500px;
-  border-radius: 8px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   overflow: hidden;
   display: flex;
   flex-direction: column;
