--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,3 +1,17 @@
 .login {
      background-color: #f2f2f2;
+     display: grid;
+     place-items: center;
+     height: 100vh;
+}
+
+.login_container {
+     display: flex;
+     flex-direction: column;
+}
+
+.login_container > img {
+     height: 200px;
+     object-fit: contain;
+     margin-bottom: 50px;
 }
